--- a/site/index.html
+++ b/site/index.html
@@ -60,8 +60,12 @@ MathJax = {
 <br>
 <center><h1 style="border-bottom:0px"> Kiernan Geoghegan </h1></center>
 
+<center></center>
+
 <center><hr>
-<span class="toc-category" style="font-size:100%"><a href="./categories/general.html">General</a></span>
+  <span class="toc-category" style="font-size:100%"><a href="./categories/aboutme.html">About Me</a></span>
+  <span class="toc-category" style="font-size:100%"><a href="./categories/projects.html">Projects</a></span>
+<span class="toc-category" style="font-size:100%"><a href="./categories/general.html">Blog Posts</a></span>
 <hr></center>
 
 <br>
